Fix header slogan on mobile view

--- a/src/app/shell/header/header.component.scss
+++ b/src/app/shell/header/header.component.scss
@@ -43,6 +43,8 @@ $header-height: 280px;
     .header-slogan {
       color: $primary;
       letter-spacing: 1.2px;
+      white-space: nowrap;
+      text-align: center;
     }
 
     .header-nav {
